# mlir-proj

./: CMakeLists.txt  NNDialect.cpp  NNDialect.h  NNDialect.td  NNOps.cpp  NNOps.h  NNOps.td  ReluCombine.cpp  nn-opt.cpp
include/: NNLower.h  NNOps.h
src/: NNDialect.cpp  NNLower.cpp  NNOps.cpp  ReluCombine.cpp  nn-opt.cpp
tests/: test.mlir
